# taida

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PHILOSOPHY.md  README.md  build.rs  deny.toml  install.sh
.config/: nextest.toml
.dev/: FIX_PROGRESS.md
.github/: CODEOWNERS  SECURITY.md
.github/bench-baselines/: perf_baseline.json  perf_router.json
.github/workflows/: addon-prebuild-template.yml  bench.yml  binary_size.yml  ci.yml  coverage.yml  doc-baseline-refresh.yml  memory.yml  net-stress.yml  perf-router-baseline.md  perf-router.yml  release.yml  security.yml  soak-smoke.yml
LICENSES/: linenoise.LICENSE
benches/: d29b_015_chunked_te_writev.rs  perf_baseline.rs
crates/addon-rs/: Cargo.toml
crates/addon-rs-sample/: Cargo.toml
crates/addon-rs-sample/src/: lib.rs
crates/addon-rs/src/: abi.rs  bridge.rs  lib.rs
crates/addon-rs/templates/: release.yml.template
crates/addon-terminal-sample/: Cargo.toml
crates/addon-terminal-sample/src/: lib.rs
docs/: STABILITY.md
docs/api/: README.md  abi.md  build_descriptors.md  bundled_packages.md  crypto.md  js.md  net.md  os.md  pool.md  prelude.md
docs/cookbook/: editor_handoff.md
docs/guide/: 00_overview.md  01_types.md  02_strict_typing.md  03_json.md  04_buchi_pack.md  04_class_like.md  05_mold.md  05_molding.md  06_lists.md  07_control_flow.md  08_error_handling.md  09_functions.md  10_modules.md  11_async.md  12_introspection.md  13_creating_addons.md  14_os_package.md  15_net_package.md  16_terminal_package.md  migration_e30.md
docs/reference/: README.md  addon_manifest.md  build_descriptors.md  class_like_types.md  cli.md  diagnostic_codes.md  documentation_comments.md  graph_model.md  memory_model.md  mold_types.md  naming_conventions.md  net_api.md  operators.md  os_api.md  perf_gates.md  release_process.md  scope_rules.md  standard_library.md  standard_methods.md  tail_recursion.md  type_constraints.md  wasm_profiles.md
examples/: 01_hello.td  02_variables.td  03_buchi_pack.td  04_functions.td  05_conditions.td  06_lists.td  07_closures.td  08_error_handling  08_error_handling.td  09_modules.td  10_list_operations.td  11_introspection.td  12_tail_recursion.td  13_async  13_async.mjs  13_async.td  14_unmold_backward.td  15_noarg_functions.td  16_unmold_both_directions.td  17_gorillax_cage.td  18_std_json.td  26_prelude_optional.td  27_prelude_result.td  28_prelude_collections.td  30_class_like_methods.td  addon_echo.td  addon_terminal.td  api_client.td  compile_arithmetic.td  compile_async  compile_async.td  compile_b11_2f_stdout.td  compile_b11_features.td  compile_buchi.td  compile_c12_11_tag_prop.td  compile_c12_1_tag_table.td  compile_c12_3_mutual_tail.td  compile_c12_4_arm_pure_expr.td  compile_c12_5_side_effect_returns.td  compile_c12b_034_wasm_nonbool_param.td  (+65 more)
examples/quality/: b1a_func_inner_func.td  b1b_func_lambda.td  b1c_func_pattern_match.td  b1d_func_error_ceiling.td  b1e_func_nested_recursion.td  b1f_func_buchi_gen.td  b1g_func_typedef_inst.td  b1h_func_mold_unmold.td  b1i_func_pipeline.td  b1k_lt_chain.td  b2a_lambda_inner_func.td  b2b_lambda_nested.td  b2c_lambda_pattern_match.td  b2d_lambda_error_ceiling.td  b2e_lambda_recursion.td  b2f_lambda_buchipack.td  b2g_lambda_typedef.td  b2h_lambda_mold_unmold.td  b2i_lambda_pipeline.td  b2j_lambda_capture_all.td  b3a_cond_inner_lambda.td  b3b_cond_nested_3.td  b3c_cond_error_ceiling.td  b3d_cond_tail_recursion.td  b3e_cond_buchi_result.td  b3f_cond_typedef_instance.td  b3g_cond_mold_unmold.td  b3h_cond_pipeline.td  b3i_cond_outer_var.td  b4a_errceil_inner_func.td  b4b_errceil_inner_lambda.td  b4c_errceil_pattern_match.td  b4d_errceil_nested.td  b4e_errceil_recursion.td  b4f_errceil_buchipack.td  b4g_errceil_typedef.td  b4h_errceil_mold_unmold.td  b4i_errceil_pipeline.td  b4j_errceil_outer_var.td  b5a_hof_inner_lambda.td  (+134 more)
scripts/: binary_size_baseline.json  measure_binary_size.sh
scripts/bench/: README.md  compare_baseline.py  parse_net_throughput.py  perf_router_gate.py  update_baseline.py
scripts/lint/: mold_surface_drift.py  panic_baseline.sh
scripts/mem/: README.md  run_valgrind_smoke.sh
scripts/perf/: README.md  gate_summary.md  measure_peak_rss.sh  peak_rss_baseline.json
scripts/release/: README.md  package-unix.sh  package-windows.ps1  secret-scan.sh  verify-signatures.sh
scripts/soak/: fast-soak-proxy.sh  run-24h-soak.sh
src/: crypto.rs  diagnostics.rs  lib.rs  main.rs  module_graph.rs  net_surface.rs  panic_cleanup.rs  project_root.rs  upgrade.rs  upgrade_d28.rs  upgrade_e30.rs  util.rs  version.rs
src/addon/: backend_policy.rs  build.rs  call.rs  facade.rs  host_target.rs  loader.rs  lockfile.rs  manifest.rs  mod.rs  prebuild_fetcher.rs  registry.rs  signature_verify.rs  url_template.rs  value_bridge.rs
src/auth/: device_flow.rs  mod.rs  token.rs
src/cli/: build.rs  build_descriptor.rs  commands.rs  help.rs  ingot.rs  mod.rs  way.rs
src/codegen/: driver.rs  edge_glue.rs  emit.rs  emit_wasm_c.rs  ir.rs  lifetime.rs  lower.rs  (+15 more)
tests/: README.md  abi_pair_shape.rs  addon_loader_smoke.rs  addon_package_integration.rs  addon_terminal_install_e2e.rs  api_diff.rs  archive_path_gate.rs  c18_enum_cross_module.rs  c18_enum_json_encode.rs  c18_enum_json_shared_field.rs  c18_enum_ordering.rs  c18_enum_ordinal_mold.rs  c18_enum_package_import.rs  c18_ordinal_no_check_strict.rs  c18b_011_imported_enum_json_encode.rs  c19_interactive_exec.rs  c20_http_dash_header.rs  c20_parser_silent_bugs.rs  c20_stdin_parity.rs  c20_stdinline_parity.rs  c20b_014_mold_user_fn_call.rs  c20b_015_json_schema_import_scope.rs  c20b_017_error_ceiling_handler_cleanup.rs  c21_float_fn_boundary.rs  c21_js_float_binding.rs  c21_wasm_simd.rs  c22_sigpipe.rs  c22_stdout_stream.rs  c22_stdout_stream_parity.rs  c23_str_parity.rs  c24_parity.rs  c25b028_json_monadic_parity.rs  c25b030_core_bundled_native_smoke.rs  c25b030_phase_1e_facade_chain.rs  c25b030_phase_1f_facade_parity.rs  c25b031_slice_positional.rs  c25b033_pascal_funcdef_parity.rs  c25b_008_doc_examples_probe.rs  c25b_008_doc_parse_baseline.txt  c25b_015_body_error_cleanup_parity.rs  (+205 more)
(+540 files in other folders)
