[package]
name = "taida"
version = "1.6.0"
edition = "2024"
license = "MIT"

[features]
default = ["native", "lsp", "community"]

# Native compiler backend (Cranelift + C runtime)
native = ["cranelift-codegen", "cranelift-frontend", "cranelift-module",
          "cranelift-object", "target-lexicon"]

# Language Server Protocol
lsp = ["tower-lsp"]

# Community features (registry, auth)
community = ["reqwest"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
httparse = "1"
sha1 = "0.10"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }

# TLS support for taida-lang/net v5
rustls = "0.23"
rustls-pemfile = "2"

# LSP server
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["full"] }

# Cranelift native compiler backend
cranelift-codegen = { version = "0.129.1", optional = true }
cranelift-frontend = { version = "0.129.1", optional = true }
cranelift-module = { version = "0.129.1", optional = true }
cranelift-object = { version = "0.129.1", optional = true }
target-lexicon = { version = "0.13", optional = true }

# QUIC transport for the Interpreter backend (NET7-9: Phase 9)
# quinn: pure Rust QUIC stack (tokio-native)
quinn = { version = "0.11", features = ["ring", "rustls-ring"] }
# rcgen: runtime cert/key generation for QUIC TLS1.3
rcgen = "0.13"

[dev-dependencies]
# h3 crate: HTTP/3 framing + QPACK semantics (hyperium/h3 reference)
# NB7-90: h3/h3-quinn are in dev-deps only — src/ implements hand-rolled
# HTTP/3 framing; these crates are kept for future integration and interop tests.
h3 = "0.0.8"
h3-quinn = "0.0.10"

[profile.dev]
codegen-units = 256  # Explicit: Rust default for dev is 256
