[workspace]
members = [".", "crates/addon-rs", "crates/addon-rs-sample", "crates/addon-terminal-sample"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[package]
name = "taida"
version = "3.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["native", "lsp", "community"]

# Native compiler backend (Cranelift + C runtime)
# libloading is part of `native` because the addon-rs loader (RC1 Phase 2)
# only runs on the Native backend; other backends fall through to a
# deterministic unsupported error from `addon::backend_policy`.
native = ["cranelift-codegen", "cranelift-frontend", "cranelift-module",
          "cranelift-object", "target-lexicon", "libloading"]

# Language Server Protocol
lsp = ["tower-lsp"]

# Community features (registry, auth)
community = ["reqwest"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
httparse = "1"
sha1 = "0.10"
base64 = "0.22"
# C12 Phase 6 (FB-5 Phase 2-3): Regex type for Str method overloads
# (replace / replaceAll / split / match / search with Regex argument).
# Interpreter uses this crate; JS backend delegates to RegExp; Native backend
# delegates to POSIX <regex.h>. wasm profiles do not link regex — Regex
# overloads are intentionally unsupported on wasm-min/wasi/full.
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }

# Archive extraction for `taida upgrade` (RC5 Phase 3)
flate2 = "1"
tar = "0.4"

# TLS support for taida-lang/net v5
rustls = "0.23"
rustls-pemfile = "2"

# LSP server
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["full"] }

# Cranelift native compiler backend
cranelift-codegen = { version = "0.129.1", optional = true }
cranelift-frontend = { version = "0.129.1", optional = true }
cranelift-module = { version = "0.129.1", optional = true }
cranelift-object = { version = "0.129.1", optional = true }
target-lexicon = { version = "0.13", optional = true }

# RC1 Phase 2 -- Native addon loader (dlopen / dlsym wrapper).
# Only pulled in by the `native` feature; other backends do not see it.
libloading = { version = "0.8", optional = true }

# RC1 Phase 2 -- in-process addon foundation crate.
# Used by the loader to share the frozen ABI v1 type definitions and
# the `TAIDA_ADDON_ABI_VERSION` / `TAIDA_ADDON_ENTRY_SYMBOL` constants.
taida-addon = { path = "crates/addon-rs", version = "2.0.0" }

# QUIC transport for the Interpreter backend (NET7-9: Phase 9)
# quinn: pure Rust QUIC stack (tokio-native)
quinn = { version = "0.11", features = ["ring", "rustls-ring"] }
# rcgen: runtime cert/key generation for QUIC TLS1.3
rcgen = "0.13"

# C17B-009: file locking for `~/.taida/store/` concurrent-install races.
# We use `libc::flock` directly (Unix only) rather than pulling in fs2 or
# nix, since flock is ~20 LoC and we already require Unix for most of the
# installer integration tests. On Windows the lock is a no-op and we rely
# on the higher-level mutual exclusion that cargo / taida session users
# already observe.
libc = "0.2"

# C20-2: UTF-8-aware line editor for the new `stdinLine` prelude API
# (Interpreter backend). MIT/Apache-2.0 dual license; we disable default
# features so the history / completion / hinter stubs are not pulled in —
# only the core editor, which is ~300 KB and gives us multibyte-aware
# Backspace / arrow-key handling on POSIX and Windows alike.
# The other backends use `node:readline/promises` (JS) and the vendored
# `linenoise` source (Native) to keep 3-backend parity.
rustyline = { version = "14", default-features = false }

[dev-dependencies]
# h3 crate: HTTP/3 framing + QPACK semantics (hyperium/h3 reference)
# NB7-90: h3/h3-quinn are in dev-deps only — src/ implements hand-rolled
# HTTP/3 framing; these crates are kept for future integration and interop tests.
h3 = "0.0.8"
h3-quinn = "0.0.10"

# C25B-004: perf regression gate. `criterion` drives the `benches/` corpus,
# invoked by `cargo bench` locally and by the dedicated bench workflow in
# CI (.github/workflows/bench.yml). Kept as dev-dep so production builds
# / release binaries do not pull it in.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

# D29B-006 (Track-α, Phase 2): heap profiler used by zero-allocation guard
# tests (e.g. `tests/d29b_006_span_eq_needle_zero_alloc.rs`). The profiler
# is opt-in per test crate via `#[global_allocator] static A: dhat::Alloc =
# dhat::Alloc;` and `dhat::Profiler::builder().testing().build()`. Pinned
# at 0.3.x for stable API surface.
dhat = "0.3"

# C25B-004 scaffold: one bench target; disable harness so criterion owns
# the test harness. Additional axes (cold-compile, native runtime) will be
# added in Phase 2 follow-up.
[[bench]]
name = "perf_baseline"
harness = false

# D29B-015 (Track-β-2 TIER 4, 2026-04-27): bench measuring the producer
# flip impact on 1MB body chunked TE response latency. Pre-flip baseline
# captured on commit 32be6d8; post-flip target is -50% latency reduction.
[[bench]]
name = "d29b_015_chunked_te_writev"
harness = false

[profile.dev]
codegen-units = 256  # Explicit: Rust default for dev is 256
